# crane-pip

./: .gitignore  README.md  pyproject.toml
src/crane_pip/: __init__.py  __main__.py  argparser.py  auth.py  cache.py  cmd_index.py  cmd_pip.py  cmd_serve.py  config.py  main.py  pip.py  proxy.py
src/rdepot_pip/: __init__.py  __main__.py  auth.py  main.py  pip.py  proxy.py
tests/: test_cache.py  test_config.py
