[project]
name = "rdepot-pip"
version = "0.1.0"
description = "Client to install python packages from an rdepot index. User authentication occurs via OAuth2."
authors = [
    { name = "Lennart Tuijnder", email = "lennart.tuijnder@openanalytics.eu" },
    { name = "Tobia De Koninck", email = "tobia.dekoninck@openanalytics.eu" }
]
dependencies = ['urllib3~=2.2.1']
readme = "README.md"
requires-python = ">= 3.8"
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
"rdepot-pip" = "rdepot_pip:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    'pip',
    "ipython>=8.12.3",
]

[tool.rye.scripts]
r = "rdepot-pip --timeout 600"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rdepot_pip"]
