[project]
name = "crane-pip"
version = "0.1.0"
description = "cli to download python package from an index (like rdepot) behind a crane server."
authors = [
    { name = "Lennart Tuijnder", email = "lennart.tuijnder@openanalytics.eu" },
    { name = "Tobia De Koninck", email = "tobia.dekoninck@openanalytics.eu" }
]
dependencies = [
    'urllib3~=2.2.1',
]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
"crane" = "crane_pip:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    'pip',
    "ipython>=8.12.3",
    "pytest>=8.2.2",
]

[tool.rye.scripts]
c = "crane-pip --timeout 600"

[tool.ruff]
line-length = 100

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crane_pip"]
